<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#fff"
    android:elevation="3dp"
    android:padding="4dp">


    <ImageView
        android:id="@+id/hr_product_image"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_photo_black_24dp"/>

    <TextView
        android:id="@+id/stock_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_rectangle_layout"
        android:backgroundTint="@color/colorGreen"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="In Stock"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hr_product_name"
        app:layout_constraintEnd_toEndOf="@+id/hr_product_image" />

    <TextView
        android:id="@+id/hr_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lines="2"
        android:maxLines="2"
        android:padding="1dp"
        android:text="@string/sample_heading"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/hr_product_image"
        app:layout_constraintStart_toStartOf="@+id/hr_product_image"
        app:layout_constraintTop_toBottomOf="@+id/hr_product_image" />

    <TextView
        android:id="@+id/hr_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="1dp"
        android:text="@string/sample_price"
        android:textColor="#000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr_product_name" />

    <TextView
        android:id="@+id/hr_product_cut_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="1dp"
        android:text="@string/sample_price"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/hr_product_price"
        app:layout_constraintStart_toEndOf="@+id/hr_product_price" />

    <View
        android:id="@+id/divider10"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#8D8B8B"
        app:layout_constraintBottom_toBottomOf="@+id/hr_product_cut_price"
        app:layout_constraintEnd_toEndOf="@+id/hr_product_cut_price"
        app:layout_constraintStart_toStartOf="@+id/hr_product_cut_price"
        app:layout_constraintTop_toTopOf="@+id/hr_product_cut_price" />

    <TextView
        android:id="@+id/hr_off_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/sample_off"
        android:textColor="#4CAF50"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/hr_product_cut_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hr_product_cut_price" />


</androidx.constraintlayout.widget.ConstraintLayout>

